{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 104,
  "lineage": "0f785714-c8f3-7f38-f812-07d8fa822b0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "roger_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6ac243963f7dae6",
            "arn": "arn:aws:ec2:us-east-1:255945442255:elastic-ip/eipalloc-0c6ac243963f7dae6",
            "association_id": "eipassoc-097eed7b3d1b8f016",
            "domain": "vpc",
            "id": "eipalloc-0c6ac243963f7dae6",
            "instance": "i-055081f8ae2b0d93e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07000c7526763daf3",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-54-225-196-208.compute-1.amazonaws.com",
            "public_ip": "54.225.196.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "roger_web_eip_0"
            },
            "tags_all": {
              "Name": "roger_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.roger_web",
            "aws_security_group.roger_web_sg",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "roger_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c104f6f4a5d9d1d5",
            "arn": "arn:aws:ec2:us-east-1:255945442255:instance/i-055081f8ae2b0d93e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055081f8ae2b0d93e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "roger_linux_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07000c7526763daf3",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fe0ef8fbd78bb06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1c86b554617c1de",
            "tags": {
              "Name": "roger_web_0"
            },
            "tags_all": {
              "Name": "roger_web_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ec6a59e6841917f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.roger_web_sg",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c104f6f4a5d9d1d5",
            "arn": "arn:aws:ec2:us-east-1:255945442255:instance/i-0c037261899a35230",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0c037261899a35230",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f29020287abc2f2",
            "private_dns": "ip-172-31-17-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.87",
            "public_dns": "ec2-54-157-214-5.compute-1.amazonaws.com",
            "public_ip": "54.157.214.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3fe1c9bce585a7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4fdc2720b8b53ba",
            "tags": {
              "Name": "web-app-instance"
            },
            "tags_all": {
              "Name": "web-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ca4ca4658a4661e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_roger_profile",
            "aws_iam_role.ec2_roger_role",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "roger_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:internet-gateway/igw-01f6ddd5f60c5fdbb",
            "id": "igw-01f6ddd5f60c5fdbb",
            "owner_id": "255945442255",
            "tags": {
              "Name": "roger_igw"
            },
            "tags_all": {
              "Name": "roger_igw"
            },
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "dependencies": [
            "aws_vpc.roger_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:loadbalancer/app/app-lb/8b1904fa5a2505bf",
            "arn_suffix": "app/app-lb/8b1904fa5a2505bf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1721108181.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:255945442255:loadbalancer/app/app-lb/8b1904fa5a2505bf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04adf0480d92a19c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05fd3c8625538c72b"
              },
              {
                "subnet_id": "subnet-0a1c86b554617c1de"
              }
            ],
            "subnets": [
              "subnet-05fd3c8625538c72b",
              "subnet-0a1c86b554617c1de"
            ],
            "tags": {
              "Name": "app-lb"
            },
            "tags_all": {
              "Name": "app-lb"
            },
            "vpc_id": "vpc-0b68abf1996540e30",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:listener/app/app-lb/8b1904fa5a2505bf/25ff636c891a9f93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:targetgroup/app-target-group/fdbdac702aca3384",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:255945442255:listener/app/app-lb/8b1904fa5a2505bf/25ff636c891a9f93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:loadbalancer/app/app-lb/8b1904fa5a2505bf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "app-listener"
            },
            "tags_all": {
              "Name": "app-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:targetgroup/app-target-group/fdbdac702aca3384",
            "arn_suffix": "targetgroup/app-target-group/fdbdac702aca3384",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:255945442255:targetgroup/app-target-group/fdbdac702aca3384",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:255945442255:loadbalancer/app/app-lb/8b1904fa5a2505bf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-target-group"
            },
            "tags_all": {
              "Name": "app-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "dependencies": [
            "aws_vpc.roger_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:255945442255:targetgroup/app-target-group/fdbdac702aca3384-20250216130251725800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:targetgroup/app-target-group/fdbdac702aca3384",
            "target_id": "i-055081f8ae2b0d93e"
          },
          "dependencies": [
            "aws_instance.roger_web",
            "aws_lb_target_group.app_tg",
            "aws_security_group.roger_web_sg",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "roger_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:route-table/rtb-0fe66c1fdbf196159",
            "id": "rtb-0fe66c1fdbf196159",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.roger_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "roger_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:route-table/rtb-06aa1904d20982fb7",
            "id": "rtb-06aa1904d20982fb7",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f6ddd5f60c5fdbb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.roger_igw",
            "aws_vpc.roger_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baeb99071d9ccff2",
            "route_table_id": "rtb-0fe66c1fdbf196159",
            "subnet_id": "subnet-0198393b57fed9869"
          },
          "dependencies": [
            "aws_route_table.roger_private_rt",
            "aws_subnet.roger_private_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d365307534d40979",
            "route_table_id": "rtb-0fe66c1fdbf196159",
            "subnet_id": "subnet-0df65370f1904161e"
          },
          "dependencies": [
            "aws_route_table.roger_private_rt",
            "aws_subnet.roger_private_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01441f2161fb5a103",
            "route_table_id": "rtb-06aa1904d20982fb7",
            "subnet_id": "subnet-0a1c86b554617c1de"
          },
          "dependencies": [
            "aws_internet_gateway.roger_igw",
            "aws_route_table.roger_public_rt",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1804c7667c8fa9e",
            "route_table_id": "rtb-06aa1904d20982fb7",
            "subnet_id": "subnet-05fd3c8625538c72b"
          },
          "dependencies": [
            "aws_internet_gateway.roger_igw",
            "aws_route_table.roger_public_rt",
            "aws_subnet.roger_public_subnet",
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:security-group/sg-04adf0480d92a19c6",
            "description": "Allow HTTP/HTTPS traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04adf0480d92a19c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "tags_all": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.roger_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "roger_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:security-group/sg-02b41b42c4e8ca6b3",
            "description": "security group for ec2",
            "egress": [],
            "id": "sg-02b41b42c4e8ca6b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow traffic from only web_sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ec6a59e6841917f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "roger_ec2_sg",
            "name_prefix": "",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roger_ec2_sg"
            },
            "tags_all": {
              "Name": "roger_ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.roger_web_sg",
            "aws_vpc.roger_vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "roger_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:security-group/sg-09ec6a59e6841917f",
            "description": "security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ec6a59e6841917f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic thro HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "121.6.18.91/32"
                ],
                "description": "allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "roger_web_sg",
            "name_prefix": "",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roger_web_sg"
            },
            "tags_all": {
              "Name": "roger_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.roger_vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "roger_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-0198393b57fed9869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0198393b57fed9869",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roger_private_subnet_0"
            },
            "tags_all": {
              "Name": "roger_private_subnet_0"
            },
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "dependencies": [
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-0df65370f1904161e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df65370f1904161e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roger_private_subnet_1"
            },
            "tags_all": {
              "Name": "roger_private_subnet_1"
            },
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "dependencies": [
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "roger_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-0a1c86b554617c1de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c86b554617c1de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roger_public_subnet_0"
            },
            "tags_all": {
              "Name": "roger_public_subnet_0"
            },
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "dependencies": [
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-05fd3c8625538c72b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fd3c8625538c72b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roger_public_subnet_1"
            },
            "tags_all": {
              "Name": "roger_public_subnet_1"
            },
            "vpc_id": "vpc-0b68abf1996540e30"
          },
          "dependencies": [
            "aws_vpc.roger_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "roger_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:vpc/vpc-0b68abf1996540e30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee8619f94d87cd56",
            "default_route_table_id": "rtb-03fd44f9887d272b2",
            "default_security_group_id": "sg-03e22cd1657596bd6",
            "dhcp_options_id": "dopt-00230c43c6dec6359",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b68abf1996540e30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fd44f9887d272b2",
            "owner_id": "255945442255",
            "tags": {
              "Name": "roger_vpc"
            },
            "tags_all": {
              "Name": "roger_vpc"
            }
          }
        }
      ]
    }
  ]
}